Setup fix for localhost

--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "xml2js": "^0.4.19"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start | npm run serve-lambda",
     "build": "react-scripts build; netlify-lambda build src/functions",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "serve-lambda": "netlify-lambda serve src/functions"
+  },
+  "proxy": {
+    "/.netlify/functions": {
+      "target": "http://localhost:9000",
+      "pathRewrite": {
+        "^/\\.netlify/functions": ""
+      }
+    }
   }
 }
